# Platterpus

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  PLANNING.md  README.md  SECURITY.md  TASKS.md  dev-setup.sh  install-appimage.sh  install.sh  pyproject.toml  setup-host.sh  uninstall.sh
.claude/: settings.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: appimage.yml  ci.yml  mutation.yml  publish-pypi.yml  release.yml
data/: io.github.rmccann_hub.Platterpus.metainfo.xml
docs/: README.md  appimage-testing.md  architecture.md  audit-2026-07-02.md  audit-2026-07-21.md  best-practices.md  ctdb-crc-algorithm.md  cyanrip-soft-fork-verify-meta-colon.c  cyanrip-soft-fork.md  dependency-contracts.md  eac-log-and-repair-feasibility.md  eac-parity-investigation.md  ecosystem-audit-2026-06.md  github-workflow-sop.md  log-format-comparison.md  manual-ctdb-repair.md  mp3-wav-support.md  platterpus-research-brief-v2.1.md  platterpus-session-start.md  release-signing.md  release-testing.md  ripper-engine-strategy.md  session-log.md  test-plan.md  testing.md  trust-audit-2026-07-08.md  upstream-modification-investigation.md  upstream-pr-roadmap.md  ux-design-principles.md  whipper-gui-research-brief-v2.1.md  whipper-gui-research-rerun-prompt.md  whipper-gui-session-start.md
docs/archive/: README.md  archival-extraction-guide-2026-06.md  audit-2026-07-02.md  ecosystem-audit-2026-06.md  offset-investigation-2026-06.md  trust-audit-2026-07-08.md  upstream-modification-investigation.md
output_reference/: README.md
output_reference/EAC_flac/: README.md
output_reference/EAC_mp3/: README.md
output_reference/EAC_wav/: README.md  eac_wav_police_classics.cue
output_reference/cyanrip_flac/: README.md  cyanrip_flac_police_classics.cue
output_reference/cyanrip_mp3/: README.md
output_reference/cyanrip_wav/: README.md
output_reference/whipper_flac/: README.md
output_reference/whipper_mp3/: README.md
output_reference/whipper_wav/: README.md
scripts/: ctdb_verify.py  eac_parity.py  file_versions.py  preflight.py  render_eac_log.py  rip_report.py  update_drive_offsets.py
scripts/cyanrip/: README.md  apply-colon-fix.py  build.sh  issue-colon.md  issue-encoder-opts.md  pr-colon.md  setup-fork.sh
src/platterpus/: __init__.py  __main__.py  app.py  app_icon.py  appimage_integration.py  atomic_write.py  build_info.py  checksums.py  cli_compare.py  composition.py  config.py  drive_access.py  drive_control.py  drive_media.py  drive_profile_store.py  drive_profiles.py  eac_log_export.py  goal_presets.py  help_content.py  library_move.py  log_buffer.py  logging_setup.py  notify.py  offset_config.py  parity.py  paths.py  preflight.py  read_speed_ladder.py  rip_compare.py  rip_report.py  rip_timing.py  settings_validation.py  update_check.py  update_install.py  update_signing.py  verdict.py
src/platterpus/adapters/: __init__.py  accuraterip_offsets.py  cover_art.py  ctdb_client.py  cyanrip_backend.py  derived_verify.py  flac_recompress.py  flac_verify.py  musicbrainz_client.py  rip_backend.py  transcode.py  whipper_backend.py
src/platterpus/ctdb/: __init__.py  calibrate.py  crc.py  diagnose.py  toc.py  verify.py
src/platterpus/parsers/: __init__.py  cd_info.py  cyanrip_info.py  cyanrip_log.py  drive_list.py  rip_log.py
src/platterpus/ui/: accessibility.py  disc_info_panel.py  drive_picker.py  drive_setup_dialog.py  help_dialogs.py  host_setup_dialog.py  main_window.py  main_window_deps.py  main_window_drive.py  main_window_helpers.py  main_window_provision.py  main_window_rip.py  main_window_shared.py  main_window_update.py  release_picker.py  rip_controls.py  rip_progress.py  settings_dialog.py  track_table.py  uninstall_dialog.py  unknown_album.py
src/platterpus/workers/: __init__.py  ctdb_worker.py  dependency_worker.py  derived_verify_worker.py  disc_info_worker.py  drive_list_worker.py  drive_setup_worker.py  flac_verify_worker.py  host_setup_worker.py  mb_worker.py  rip_worker.py  update_worker.py
src/whipper_gui/: __init__.py  app.py  appimage_integration.py  composition.py  config.py  drive_access.py  drive_control.py  eac_log_export.py  help_content.py  logging_setup.py  offset_config.py  parity.py  paths.py  preflight.py  update_check.py  update_install.py
src/whipper_gui/adapters/: accuraterip_offsets.py  cover_art.py  ctdb_client.py  cyanrip_backend.py  flac_recompress.py  flac_verify.py  metaflac.py  musicbrainz_client.py  transcode.py  whipper_backend.py
src/whipper_gui/ctdb/: __init__.py  decode.py  toc.py  verify.py
src/whipper_gui/parsers/: cd_info.py  cyanrip_info.py  cyanrip_log.py  drive_list.py  rip_log.py
src/whipper_gui/ui/: __init__.py  disc_info_panel.py  drive_picker.py  drive_setup_dialog.py  help_dialogs.py  host_setup_dialog.py  main_window.py  main_window_deps.py  main_window_drive.py  main_window_helpers.py  main_window_provision.py  main_window_rip.py  main_window_update.py  (+6 more)
tests/: conftest.py  test_accuraterip_offsets.py  test_app.py  test_app_icon.py  test_app_smoke.py  test_appimage_integration.py  test_atomic_write.py  test_build_harness.py  test_build_info.py  test_checksums.py  test_cli_compare.py  test_composition.py  test_config.py  test_cover_art.py  test_ctdb_calibrate.py  test_ctdb_client.py  test_ctdb_decode.py  test_ctdb_diagnose.py  test_ctdb_toc.py  test_ctdb_verify.py  test_ctdb_worker.py  test_cyanrip_backend.py  test_cyanrip_colon_patcher.py  test_dependency_worker.py  test_deps_checks.py  test_deps_host_setup.py  test_deps_host_teardown.py  test_deps_manager.py  test_deps_registry.py  test_deps_resolvers.py  test_deps_step_engine.py  test_deps_version.py  test_derived_verify.py  test_derived_verify_worker.py  test_disc_info_worker.py  test_doc_version_stamps.py  test_drive_access.py  test_drive_control.py  test_drive_list_worker.py  test_drive_media.py  (+65 more)
tests/fixtures/: README.md  cd_info_pink_floyd.txt  cd_info_with_noise.txt  drive_list_empty.txt  drive_list_pioneer.txt  drive_list_pioneer_unconfigured.txt  drive_list_two_drives.txt  eac_baseline_police_classics.cue
(+18 files in other folders)
