[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platterpus"
# Version is single-sourced from `src/platterpus/__init__.py:__version__`
# (see [tool.setuptools.dynamic] below). Do NOT hard-code it here.
dynamic = ["version"]
description = "A secure, EAC-style CD ripper for Linux (FLAC, WAV, WavPack, MP3)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Platterpus contributors" }]
# "whipper"/"cyanrip" are kept as keywords: they're the rip backends Platterpus
# drives, which is what someone searching for a GUI for them would look up.
keywords = ["audio", "cd", "rip", "flac", "wavpack", "mp3", "musicbrainz", "accuraterip", "whipper", "cyanrip", "qt"]
# License: GPL-3.0-only (KDD-10, decided 2026-05-30). Declared as a PEP 639
# SPDX expression (`license` string + `license-files`); this is the standard as
# of setuptools 77+, and the deprecated `License ::` classifier was dropped
# (setuptools now warns on it and will eventually reject it). `LICENSE` is
# bundled into the wheel via `license-files`. Compatible with our deps: PySide6
# is imported under its LGPL-3 option; cyanrip/ctdb-cli are invoked as
# subprocesses (no linking), so their GPL doesn't reach in.
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
]
dependencies = [
    "PySide6>=6.7,<7",
    "musicbrainzngs==0.7.1",
    "tomli-w>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.15,<1",
    "pytest-cov>=5",      # coverage measurement + the CI --cov-fail-under gate
    "hypothesis>=6",      # property-based tests (tests/test_parsers_property.py)
    "mypy>=1.13,<2",      # static type-checking (the CI `typecheck` job)
]

[project.scripts]
# Console-script entry — used by pipx install and the AppImage's AppRun.
platterpus = "platterpus.__main__:main"

[project.urls]
Repository = "https://github.com/rmccann-hub/Platterpus"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the in-app window icon (the Platterpus logo SVG) inside the package so it
# is present identically from a source checkout, a pipx install, and the AppImage
# (no loose data-file wiring — same reasoning as help_content living in-code).
[tool.setuptools.package-data]
platterpus = ["resources/*.svg"]

# Single source of truth for the version: the build reads __version__ from the
# package itself, so `pyproject.toml` never duplicates it. Everything else
# (the `--version` flag, the About dialog, the MusicBrainz user-agent) already
# imports `platterpus.__version__`, and installed-package metadata
# (`importlib.metadata.version`) is generated from this at build time.
[tool.setuptools.dynamic]
version = { attr = "platterpus.__version__" }

# Ruff is the project linter + formatter (added 2026-06-04). `ruff check`
# lints, `ruff format` formats; CI runs both in --check/no-fix mode. Defaults
# (88-col, double quotes) match the existing code, so adoption was low-churn.
[tool.ruff]
target-version = "py311"
src = ["src"]
# Machine-generated data module (a base64 blob) — regenerated by
# scripts/update_drive_offsets.py; don't lint/format it.
extend-exclude = ["src/platterpus/adapters/accuraterip_offsets_data.py"]

[tool.ruff.lint]
# E/W=pycodestyle, F=pyflakes, I=isort (import order), B=flake8-bugbear
# (likely-bug patterns), UP=pyupgrade (modern 3.11+ syntax).
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    # Long lines are largely comments/strings; the formatter wraps code and
    # we don't want it splitting prose or URLs. Keep E501 off.
    "E501",
]

[tool.ruff.lint.flake8-bugbear]
# Qt's model/view override signatures legitimately default index args to a
# fresh QModelIndex() (the documented PySide idiom); treat it as immutable so
# B008 doesn't flag every rowCount/columnCount/data/parent override.
extend-immutable-calls = ["PySide6.QtCore.QModelIndex"]

# Static type-checking (added 2026-07-08). The project mandates type hints on
# every signature, but nothing verified them until now. This is a deliberately
# NON-STRICT baseline: it catches real type errors (wrong attribute, bad return
# type, None where a value is required) without a big-bang annotation sprint.
# Strictness ratchets up module-by-module — mirroring the coverage floor — with
# adapters/parsers/workers/ctdb the first candidates for `disallow_untyped_defs`.
#
# The Qt UI layer is excluded for now (see the override below): the MainWindow
# "god-object" is composed from mixins (docs/architecture.md), so attributes are
# declared in one mixin and assigned in the concrete class, and `self` inside a
# mixin isn't a QWidget — patterns mypy can't follow without a dedicated typing
# strategy (a shared Protocol or typed base). Typing that layer is its own
# tracked follow-up; until then the rest of the codebase is checked on every PR.
[tool.mypy]
python_version = "3.11"
files = ["src/platterpus"]
# Third-party libs without type stubs (musicbrainzngs, etc.) are ignored for now;
# this too can tighten later (per-module overrides) once the core is clean.
ignore_missing_imports = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# The Qt UI mixin layer — excluded from the gate until it gets a typing strategy
# (see the note above). Everything else IS checked.
module = "platterpus.ui.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
# `-q` keeps the output readable while the suite is small.
# `--strict-markers` rejects typo'd `@pytest.mark.foo` decorators.
# Coverage flags are NOT in addopts on purpose: a bare local `pytest` stays
# fast and plugin-light. CI adds `--cov ... --cov-fail-under` explicitly
# (see .github/workflows/ci.yml); the thresholds live there, not here.
addopts = "-q --strict-markers"

# Coverage config (consumed when CI runs `pytest --cov`). Branch coverage is
# stricter than line coverage — it requires both sides of every if/try taken.
[tool.coverage.run]
branch = true
source = ["platterpus"]

[tool.coverage.report]
# Don't count lines that are unreachable-by-design.
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",  # `...` stub bodies on Protocol/ABC methods
]
