[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platterpus"
# Version is single-sourced from `src/platterpus/__init__.py:__version__`
# (see [tool.setuptools.dynamic] below). Do NOT hard-code it here.
dynamic = ["version"]
description = "A secure, EAC-style CD ripper for Linux (FLAC, WAV, WavPack, MP3)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Platterpus contributors" }]
# "whipper"/"cyanrip" are kept as keywords: they're the rip backends Platterpus
# drives, which is what someone searching for a GUI for them would look up.
keywords = ["audio", "cd", "rip", "flac", "wavpack", "mp3", "musicbrainz", "accuraterip", "whipper", "cyanrip", "qt"]
# License: GPL-3.0-only (KDD-10, decided 2026-05-30). Declared as a PEP 639
# SPDX expression (`license` string + `license-files`); this is the standard as
# of setuptools 77+, and the deprecated `License ::` classifier was dropped
# (setuptools now warns on it and will eventually reject it). `LICENSE` is
# bundled into the wheel via `license-files`. Compatible with our deps: PySide6
# is imported under its LGPL-3 option; cyanrip/ctdb-cli are invoked as
# subprocesses (no linking), so their GPL doesn't reach in.
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
]
dependencies = [
    "PySide6>=6.7,<7",
    "musicbrainzngs==0.7.1",
    "tomli-w>=1.0,<2",
    # Ed25519 verification of a release's minisign signature (the in-app
    # updater's authenticity gate — src/platterpus/update_signing.py). Floor 41
    # comfortably has Ed25519; ceiling <47 refuses a future major unreviewed.
    "cryptography>=41,<47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.15,<1",
    "pytest-cov>=5",      # coverage measurement + the CI --cov-fail-under gate
    "hypothesis>=6",      # property-based tests (tests/test_parsers_property.py)
    "mypy>=1.13,<3",      # static type-checking (the CI `typecheck` job)
]

[project.scripts]
# Console-script entry — used by pipx install and the AppImage's AppRun.
platterpus = "platterpus.__main__:main"

[project.urls]
Repository = "https://github.com/rmccann-hub/Platterpus"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the in-app window icon (the Platterpus logo SVG) inside the package so it
# is present identically from a source checkout, a pipx install, and the AppImage
# (no loose data-file wiring — same reasoning as help_content living in-code).
[tool.setuptools.package-data]
platterpus = ["resources/*.svg"]

# Single source of truth for the version: the build reads __version__ from the
# package itself, so `pyproject.toml` never duplicates it. Everything else
# (the `--version` flag, the About dialog, the MusicBrainz user-agent) already
# imports `platterpus.__version__`, and installed-package metadata
# (`importlib.metadata.version`) is generated from this at build time.
[tool.setuptools.dynamic]
version = { attr = "platterpus.__version__" }

# Ruff is the project linter + formatter (added 2026-06-04). `ruff check`
# lints, `ruff format` formats; CI runs both in --check/no-fix mode. Defaults
# (88-col, double quotes) match the existing code, so adoption was low-churn.
[tool.ruff]
target-version = "py311"
src = ["src"]
# Machine-generated data module (a base64 blob) — regenerated by
# scripts/update_drive_offsets.py; don't lint/format it.
extend-exclude = ["src/platterpus/adapters/accuraterip_offsets_data.py"]

[tool.ruff.lint]
# E/W=pycodestyle, F=pyflakes, I=isort (import order), B=flake8-bugbear
# (likely-bug patterns), UP=pyupgrade (modern 3.11+ syntax).
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    # Long lines are largely comments/strings; the formatter wraps code and
    # we don't want it splitting prose or URLs. Keep E501 off.
    "E501",
]

[tool.ruff.lint.flake8-bugbear]
# Qt's model/view override signatures legitimately default index args to a
# fresh QModelIndex() (the documented PySide idiom); treat it as immutable so
# B008 doesn't flag every rowCount/columnCount/data/parent override.
extend-immutable-calls = ["PySide6.QtCore.QModelIndex"]

# Static type-checking (added 2026-07-08). The project mandates type hints on
# every signature; this gate verifies them. It began as a non-strict baseline
# (catch wrong-attribute / bad-return / None-misuse without a big-bang sprint)
# and ratcheted up module-by-module, mirroring the coverage floor. As of
# 2026-07-20 `disallow_untyped_defs` + `disallow_incomplete_defs` are ENFORCED
# across the ENTIRE package — there are no per-module exclusions left. The Qt
# MainWindow "god-object" and its five mixins were the last hold-out (a mixin's
# `self` is the concrete window at runtime but typed as the bare mixin, so
# cross-mixin `self._x` access couldn't resolve); they now share a typing seam,
# `platterpus.ui.main_window_shared.MainWindowShared`, that declares the surface
# the window exposes to its mixins (see that module + docs/architecture.md §3.6).
[tool.mypy]
python_version = "3.11"
files = ["src/platterpus"]
# Third-party libs without type stubs (musicbrainzngs, etc.) are ignored for now;
# this too can tighten later (per-module overrides) once the core is clean.
ignore_missing_imports = true
warn_redundant_casts = true
# Strict def-typing across the whole package: an untyped or partially-typed
# function ANYWHERE now fails the gate. Every package already carried full
# annotations by the time it was brought in, so each ratchet step was a config
# tighten, not an annotation sprint (the UI mixins needed the seam module above).
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
# `-q` keeps the output readable while the suite is small.
# `--strict-markers` rejects typo'd `@pytest.mark.foo` decorators.
# Coverage flags are NOT in addopts on purpose: a bare local `pytest` stays
# fast and plugin-light. CI adds `--cov ... --cov-fail-under` explicitly
# (see .github/workflows/ci.yml); the thresholds live there, not here.
addopts = "-q --strict-markers"

# Coverage config (consumed when CI runs `pytest --cov`). Branch coverage is
# stricter than line coverage — it requires both sides of every if/try taken.
[tool.coverage.run]
branch = true
source = ["platterpus"]

[tool.coverage.report]
# Don't count lines that are unreachable-by-design.
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",  # `...` stub bodies on Protocol/ABC methods
]
